microservices/nodejs_microservice_app/k8s/overlays/dev/ing-front-patch.yaml
# overlays/dev/ing-frontend-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-svc
spec:
  rules:
    - host: dev.myapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
