microservices/nodejs_microservice_app/k8s/overlays/dev/ing-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-svc
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: dev.myapp.local
      http:
        paths:
          # ✅ Frontend (NO rewrite, must come first)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          # ✅ APIs (regex + rewrite)
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080

          - path: /customers(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: customer
                port:
                  number: 8001

          - path: /products(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: products
                port:
                  number: 8002
